--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -8,7 +8,7 @@
 <body>
   <h1>Privacy Policy</h1>
 
-  <p><strong>Effective Date:</strong> [Your Upload Date]</p>
+  <p><strong>Effective Date:</strong> [14th August, 2025]</p>
 
   <p>This privacy policy describes how Albatross Space Run handles information for users of all ages, including children under 13, in accordance with Google Play policies and applicable privacy regulations.</p>
 
@@ -45,7 +45,7 @@
   <h2>5. Contact</h2>
   <p>
     If you have any questions or concerns about this privacy policy, feel free to contact us at:<br />
-    <strong>[your-email@example.com]</strong>
+    <strong>[albatrossgamestudio@gmail.com]</strong>
   </p>
 
   <p>By using Albatross Space Run, you agree to this privacy policy.</p>
